language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:2:20 ───
   │
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
 3 │     resource struct R {}
   │     -------- The type's constraint information was determined here
   ·
 8 │         let B<CupC<R>> {} = abort 0;
   │               ^^^^^^^ Constraint not satisfied.
   │                    - The resource type '0x8675309::M::R' does not satisfy the constraint 'copyable'
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:2:20 ───
   │
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
 3 │     resource struct R {}
   │     -------- The type's constraint information was determined here
   ·
 9 │         B<CupC<R>> {} = abort 0;
   │           ^^^^^^^ Constraint not satisfied.
   │                - The resource type '0x8675309::M::R' does not satisfy the constraint 'copyable'
   │

